--- a/components/nav-pagination/nav-pagination.css
+++ b/components/nav-pagination/nav-pagination.css
@@ -1,7 +1,8 @@
 .navigation {
   height: 30px;
   display: grid;
-  grid-template-columns: 100px 100px 100px;
+  grid-template-columns: 1fr 1fr 1fr;
+  align-self: end;
 }
 
 .navigation__pagination {
