--- a/components/card/card.css
+++ b/components/card/card.css
@@ -1,5 +1,10 @@
 .card-container {
   margin-bottom: 10px;
+  display: flex;
+  gap: 1rem;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 .card {
   width: 300px;
