made sticky footer

--- a/components/nav-pagination/nav-pagination.css
+++ b/components/nav-pagination/nav-pagination.css
@@ -3,6 +3,9 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   align-self: end;
+  position: sticky;
+  bottom: 0;
+  background-color: white;
 }
 
 .navigation__pagination {
