--- a/components/card/card.css
+++ b/components/card/card.css
@@ -1,5 +1,9 @@
 .card-container {
   margin-bottom: 10px;
+  display: flex;
+flex-wrap: wrap;
+justify-content: center;
+gap: 14px
 }
 .card {
   width: 300px;
